--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -32,6 +32,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup pnpm
         uses: pnpm/action-setup@v2.2.2
+        with:
+          version: 7.18.2
 #      - name: Detect package manager
 #        id: detect-package-manager
 #        run: |
