--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -51,11 +51,6 @@ jobs:
 #            echo "Unable to determine packager manager"
 #            exit 1
 #          fi
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
-          cache: ${{ steps.detect-package-manager.outputs.manager }}
       - name: Setup Pages
         uses: actions/configure-pages@v3
         with:
@@ -76,10 +71,12 @@ jobs:
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
       - name: Install dependencies
         run: pnpm i --frozen-lockfile
+#      - name: Build with Next.js
+#        run: ${{ steps.detect-package-manager.outputs.runner }} next build
+#      - name: Static HTML export with Next.js
+#        run: ${{ steps.detect-package-manager.outputs.runner }} next export
       - name: Build with Next.js
-        run: ${{ steps.detect-package-manager.outputs.runner }} next build
-      - name: Static HTML export with Next.js
-        run: ${{ steps.detect-package-manager.outputs.runner }} next export
+        run: pnpm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
